--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-   <link rel="stylesheet" href="./style.css">
+   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -53,7 +53,7 @@
     <section  class="my-intro">
     <div class="gradient-background">
         <div class="container">
-        <img src="./images/my image.jpeg" alt="my image"> 
+        <img src="my image.jpeg" alt="my image"> 
         <h1 class="name">Kiran Kanwar</h1>
         
         <h5>👋 Hi, I’m Kiran Kanwar Rathore — a passionate and detail-oriented Frontend Developer 
@@ -73,7 +73,7 @@
     <section class="about-me">
     <div class="left">
      <h3>👨‍💻 What I Do:</h3>
-     <img src="./images/img 92.jpg" alt="programming">
+     <img src="img 92.jpg" alt="programming">
      <ul>
      <li><h5>Develop clean, responsive, and engaging web interfaces</h5></li>
      <li><h5>Turn design systems into functional, interactive UIs</h5></li>
@@ -82,7 +82,7 @@
     </div>
      <div class="right">
      <h3>📈 My Digital Footprint:</h3>
-     <img src="./images/img 88.jpg" alt="programming">
+     <img src="img 88.jpg" alt="programming">
     <ul>
      <li><h5>2,00,000+ professional network on LinkedIn</h5></li>
      <li><h5>16,000+ community members on Telegram</h5></li>
@@ -93,7 +93,7 @@
     </section>
     <section class="about-linkedin">
       <div class="linkedin">
-      <img src="./images/linkedin ss.png" alt="profile">
+      <img src="ss.png" alt="profile">
       <h1>What I Do on LinkedIn</h1>
       
         <h5>On LinkedIn, I’ve built a network of over 200k professionals by 
@@ -113,28 +113,28 @@
 
      <div class="hobby">
         <div class="box">
-            <img src="./images/music.avif" alt="music">
+            <img src="music.avif" alt="music">
             <h5>Listening Music</h5>
         </div>
         <div class="box">
-            <img src="./images/dance.jpg" alt="Dance">
+            <img src="dance.jpg" alt="Dance">
             <h5>Dancing</h5>
          </div>
 
         <div class="box">
-            <img src="./images/movies.jpg" alt="Movies">
+            <img src="movies.jpg" alt="Movies">
               <h5>watching movies</h5>
         </div>       
         <div class="box">    
-            <img src="./images/workout.jpg" alt="Workout">
+            <img src="workout.jpg" alt="Workout">
             <h5>Doing workout</h5>
         </div>    
         <div class="box">
-            <img src="./images/reading.jpg" alt="Reading">
+            <img src="reading.jpg" alt="Reading">
             <h5>Reading Books</h5>
         </div>    
         <div class="box">
-            <img src="./images/games.jpeg" alt="video Games">
+            <img src="games.jpeg" alt="video Games">
             <h5>Video Games</h5>
         </div>
  
@@ -145,7 +145,7 @@
     </section>
     <section class="Thank-you">
         <div>
-            <img src="./images/thanks.jpg" alt="my pic">
+            <img src="thanks.jpg" alt="my pic">
             <h3>Thank you for visiting my website. I Hope you enjoyed it.</h3>
         </div>
     </section>
