--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
     <section class="about-linkedin">
       <div class="linkedin">
-      <img src="ss.png" alt="profile">
+      <img src="linkedin ss.png" alt="profile">
       <h1>What I Do on LinkedIn</h1>
       
         <h5>On LinkedIn, I’ve built a network of over 200k professionals by 
