--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"> <input type="search" class="form-control" placeholder="Search..." aria-label="Search"> </form> 
              <div class="dropdown text-end">
                  <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                 <img src="./images/kiran image.jpg" alt="profile pic"  height="32" class="rounded-circle"> 
+                 <img src="kiran image.jpg" alt="profile pic"  height="32" class="rounded-circle"> 
                 </a>
                   <ul class="dropdown-menu text-small"> <li><a class="dropdown-item" href="#">New project...</a></li> 
                     <li><a class="dropdown-item" href="#">Settings</a></li> 
